# embassy

./: ci.sh
embassy-net/src/: dns.rs  lib.rs
embassy-stm32/src/: lib.rs
examples/boot/bootloader/nrf/: Cargo.toml
examples/boot/bootloader/nrf/.cargo/: config.toml
examples/boot/bootloader/nrf/src/: main.rs
examples/stm32f0/: Cargo.toml
examples/stm32f0/.cargo/: config.toml
tests/boot/nrf/: Cargo.toml  build.rs  memory.x
tests/boot/nrf/.cargo/: config.toml
tests/boot/nrf/src/: common.rs
tests/nrf/: Cargo.toml  memory.x
tests/stm32/: build.rs
tests/stm32/.cargo/: config.toml
