[package]
name = "embassy-stm32f0-examples"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Change stm32f091rc to your chip name, if necessary.
embassy-stm32 = { version = "0.1.0", path = "../../embassy-stm32", features = ["nightly",  "memory-x", "stm32f091rc", "time-driver-any", "unstable-pac"] }
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embassy-sync = { version = "0.3.0", path = "../../embassy-sync", features = [] }
embassy-executor = { version = "0.3.0", path = "../../embassy-executor", features = ["nightly", "arch-cortex-m", "executor-thread", "integrated-timers"] }
embassy-time = { version = "0.1.3", path = "../../embassy-time", features = [ "tick-hz-32_768"] }
static_cell = { version = "1.1", features = ["nightly"]}
panic-halt = "0.2.0"

[profile.release]
debug = 2
opt-level = 's'
lto = 'fat'